--- a/Apps/Client/src/components/forms/QuestionForm.scss
+++ b/Apps/Client/src/components/forms/QuestionForm.scss
@@ -8,12 +8,7 @@
   box-shadow: $box-shadow-light;
 
   @include desktop {
-    position: absolute;
-    top: 50%;
-    right: 0;
     padding: 15px 25px;
-    transform: translate(-100px, -50%);
-    align-items: flex-end;
     max-width: 820px;
   }
 
@@ -24,19 +19,16 @@
 
     > .question-form-index {
       margin-right: 5px;
-      margin-bottom: 5px;
       padding: 10px;
       border-radius: 4px;
       font-weight: bold;
       text-align: right;
-      @include font-subtitle;
     }
 
     > .question-form-theme {
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-bottom: 5px;
       padding: 10px;
       border-radius: 4px;
       color: $color-white;
@@ -88,6 +80,8 @@
   > .question-form-title {
     margin-top: 0;
     margin-bottom: 20px;
+
+    @include font-title;
   }
 
   > .checkbox {
@@ -113,7 +107,6 @@
       cursor: pointer;
       transition: background-color 0.3s, color 0.3s;
       text-align: center;
-      @include font-subtitle;
 
       @include tablet {
         width: auto;
