--- a/Apps/Client/src/pages/Page.scss
+++ b/Apps/Client/src/pages/Page.scss
@@ -8,14 +8,27 @@
   width: 100%;
   height: 100%;
   margin-top: 50px;
-  margin-bottom: 5px;
-
-  // Hide everything when screen is too small
-  @media (max-width: $min-width) {
-    display: none !important;
-  }
 
   @include desktop {
     margin-top: 0;
+    align-items: flex-end;
+  }
+
+  > .app-version {
+    background-color: $color-black;
+    color: $color-white;
+    padding: 10px 20px;
+    border-radius: 8px;
+    margin-top: 5px;
+    margin-left: auto;
+    font-size: $font-size-caption;
+
+    @include tablet {
+      font-size: $font-size-tablet-caption;
+    }
+
+    @include desktop {
+      font-size: $font-size-desktop-caption;
+    }
   }
 }
